redis/5.8/modules/ROOT/pages/redis-connector-xml-maven.adoc
= Redis Connector 5.8 XML and Maven Support 
:page-aliases: connectors::redis/redis-connector-xml-maven.adoc

If you manually code a Mule runtime engine (Mule) app in XML, either from the Anypoint Studio XML editor or from a text editor, you can get access to the connector in your app by adding reference statements to both your XML Mule flow and the Apache Maven `pom.xml` file.

When you install the connector in Studio, Studio automatically populates the XML code with the connector's namespace and schema location. It also adds a dependency to the `pom.xml` file.

== Add a Namespace for the Connector

Paste the following code inside the `<mule>` tag of the header of your configuration XML:

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/redis
http://www.mulesoft.org/schema/mule/redis/current/mule-redis.xsd">
----

This example shows how the namespace statements are placed in the `<mule>` XML block:

[source,xml,linenums]
----
<mule xmlns:redis="http://www.mulesoft.org/schema/mule/redis"
	xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans
	http://www.springframework.org/schema/beans/spring-beans-current.xsd
	http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
	http://www.mulesoft.org/schema/mule/ee/tracking
	http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
	http://www.mulesoft.org/schema/mule/redis
	http://www.mulesoft.org/schema/mule/redis/current/mule-redis.xsd">
----

== Add a POM File Dependency

The Apache Maven `pom.xml` file generated by Anypoint Studio contains dependencies for a Mule app. If you code a Mule app manually, include this XML snippet in your `pom.xml` file to enable access to this connector:

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-redis-connector</artifactId>
  <version>x.x.x</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Replace `x.x.x` with the version that corresponds to the connector you are using.

To obtain the most up-to-date `pom.xml` file information:

. Go to https://www.mulesoft.com/exchange/[Anypoint Exchange].
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for `redis`.
. Select the connector.
. Click *Dependency Snippets* near the upper right of the screen.

[[configure-connection-xml]]
== Configure a Connection in XML

Use `<redis:redis-config>` with a nested connection element. Valid connection elements are `<redis:clustered-connection>`, `<redis:nonclustered-connection>`, and `<redis:sentinel-connection>`.

This *NonClustered* example sets an independent socket (read) timeout:

[source,xml,linenums]
----
<redis:redis-config name="Redis_Config">
  <redis:nonclustered-connection
    host="${redis.host}"
    port="${redis.port}"
    connectionTimeout="2000"
    socketTimeout="500"
    socketTimeUnit="MILLISECONDS"/>
</redis:redis-config>
----

Omit `socketTimeout` to reuse `connectionTimeout` as the read timeout.

This *Clustered* example applies pool sizing. Starting with Redis Connector 5.8, `maxTotal` and `maxWaitMillis` are honored on the cluster client:

[source,xml,linenums]
----
<redis:redis-config name="Redis_Cluster_Config">
  <redis:clustered-connection
    clusterHosts="${redis.clusterHosts}"
    maxTotal="200"
    maxWaitMillis="1000"/>
</redis:redis-config>
----

== Next

After completing your namespace and `pom.xml` file, you can try the Redis xref:redis-connector-examples.adoc[Examples].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.salesforce.com[Salesforce Help]
